--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -7,14 +7,16 @@
           <div class="panel-container">
             <div class="panel panel-default">
               <div class="panel-body">
-                <button ng-click="addProduct()" class="btn-status-success">Add Product</button>
-                <button ng-click="editProduct()" class="btn-status-default">Edit</button>
+                <button ng-click="addProduct()" class="btn-status-success">Add Product Group</button>
+                <!-- <button ng-click="editProduct()" class="btn-status-default">Edit</button> -->
                 <button ng-click="deleteProduct(product._id)" class="btn-status-danger">Delete</button>
               </div>
-            </div>
+            </div> 
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="table-responsive">
+                  <h4> Sourced Products (ex. Raw)</h3>
+                      <br>
                   <table class="table tableWhite">
                     <thead>
                       <tr>
@@ -23,14 +25,42 @@
                         <th>Description</th>
                       </tr>
                     </thead>
-                    <tbody ng-repeat="product in products track by $index">
+                    <tbody ng-repeat="sourcedProduct in sourcedProducts track by $index">
                       <tr>
                         <td data-label="Select">
-                          <input type="radio" ng-model="$parent.selectedProduct" ng-value="$index">
+                          <input type="radio" ng-model="$parent.selectedProduct" ng-value="$parent.sourcedProducts[$index]">
                         </td>
-                        <td data-label="Product">{{product.name}}</td>
-                        <!-- <td data-label="Unit Price">${{product.unitPrice}}/{{product.unit}}</td> -->
-                        <td data-label="Description">{{product.description}}</td>
+                        <td data-label="Product">{{sourcedProduct.name}}</td>
+                        <!-- <td data-label="Unit Price">${{sourcedProduct.unitPrice}}/{{sourcedProduct.unit}}</td> -->
+                        <td data-label="Description">{{sourcedProduct.description}}</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="table-responsive">
+                  <h4> Finished Products (ex. Smoked, Filetted)</h3>
+                      <br>
+                  <table class="table tableWhite">
+                    <thead>
+                      <tr>
+                        <th>Select</th>
+                        <th>Product Name</th>
+                        <th>Description</th>
+                      </tr>
+                    </thead>
+                    <tbody ng-repeat="finishedProduct in finishedProducts track by $index">
+                      <tr>
+                        <td data-label="Select">
+                          <input type="radio" ng-model="$parent.selectedProduct" ng-value="$parent.finishedProducts[$index]">
+                        </td>
+                        <td data-label="Product">{{finishedProduct.name}}</td>
+                        <!-- <td data-label="Unit Price">${{finishedProduct.unitPrice}}/{{finishedProduct.unit}}</td> -->
+                        <td data-label="Description">{{finishedProduct.description}}</td>
                       </tr>
                     </tbody>
                   </table>
@@ -45,7 +75,7 @@
 </div>
 
 
-<!-- ADD PRODUCT MODAL-->
+<!-- ADD SOURCED PRODUCT MODAL-->
 <script type="text/ng-template" id="addProductModal.html">
   <div class="modal-header">
     <h3 class="modal-title text-center">Add a Product</h3>
@@ -53,42 +83,106 @@
   <div class="modal-body">
     <form name="addProductForm" ng-init="item=0">
       <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Product Name &nbsp;
-            <span ng-show="productRequired" class="input-required"> * Required</span>
-          </label>
-          <input class="form-control" name="name" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod" required='true'>
-          <small class="text-muted">Please enter the product name.</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Attach Product Photo</label>
-             <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-             <small class="text-muted">PNG and JPG files only</small>
-          <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
+          <div class="col-lg-6">
+            <label>Product Name &nbsp;
+              <span ng-show="productRequired" class="input-required"> * Required</span>
+            </label>
+            <input class="form-control" name="name" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod" required='true'>
+            <small class="text-muted">Please enter the product name.</small>
           </div>
-        </div>
+          <div class="col-lg-6">
+              <!-- <div class="panel-scroll"> -->
+              <label>Associated Finished Goods</label>
+
+                <div class="table-responsive">
+                  <table class="table tableWhite">
+
+                    <tbody>
+
+                        <tr ng-repeat="finishedProduct in finishedProducts track by $index">
+                            <td data-label="Name">&nbsp; {{finishedProducts[$index].name}}</td>
+
+                          <td data-label="Select">
+                            <input type="radio" ng-model="$parent.selectedFinishedProduct" ng-value="$parent.finishedProducts[$index]">
+                          </td>
+                        </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <button class="btn-status-success" ng-click="addFinishedProduct()"><i class="fa fa-plus"></i></button>
+              </div>
+
+
       </fieldset>
       <fieldset class="form-group">
-        <div class="col-lg-6 col-lg-offset-6">
-          <label>Finished Good Type</label>
-          <div class ="input-wrapper">
-             <input class="form-control" type="text" ng-model="finishedGood" name="finishedGood" placeholder="ex. Smoked"></input>
-             <button class="btn-status-danger" ng-click="item=1"><i class="fa fa-plus"></i></button>
-           </div>
-             <small class="text-muted">Please enter the finished good type</small>
+          <div class="col-lg-6">
+            <label>Attach Product Photo</label>
+               <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+               <small class="text-muted">PNG and JPG files only</small>
+            <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
+            </div>
+          </div>
+
+        </fieldset>
+
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Description</label>
+          <input class="form-control" ng-model="description" maxlength="45" placeholder="Enter a short product description">
+          <small class="text-muted">Maximum 45 characters</small>
         </div>
-        <!-- <div class="col-lg-6 col-lg-offset-6" ng-show="item==1">
-          <div class ="input-wrapper">
-             <input class="form-control" type="text" ng-model="finishedGood" name="finishedGood" placeholder="ex. Smoked"></input>
-             <button class="btn-status-danger" ng-click="item=1"><i class="fa fa-minus"></i></button>
-           </div>
-             <small class="text-muted">Please enter the finished good type</small>
-        </div> -->
       </fieldset>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <div class="alignright">
+      <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
+      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+  </div>
+</script>
+
+
+<!-- ADD FINISHED PRODUCT MODAL-->
+<script type="text/ng-template" id="addFinishedProductModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title text-center">Add a Finished Good Type</h3>
+  </div>
+  <div class="modal-body">
+    <form name="addProductForm" ng-init="item=0">
+      <fieldset class="form-group">
+          <div class="col-lg-12">
+            <label>Product Name &nbsp;
+              <span ng-show="productRequired" class="input-required"> * Required</span>
+            </label>
+            <input class="form-control" name="name" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod" required='true'>
+            <small class="text-muted">Please enter the product name.</small>
+          </div>
+
+      </fieldset>
+      <fieldset class="form-group">
+          <div class="col-lg-12">
+            <label>Attach Product Photo</label>
+               <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+               <small class="text-muted">PNG and JPG files only</small>
+            <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
+            </div>
+          </div>
+
+        </fieldset>
+
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Description</label>
           <input class="form-control" ng-model="description" maxlength="45" placeholder="Enter a short product description">
+          <small class="text-muted">Maximum 45 characters</small>
+        </div>
+      </fieldset>
+
+      <fieldset class="form-group">
+        <div class="col-lg-12">
+          <label>Product Number</label>
+          <input class="form-control" ng-model="finishedProductNumber" maxlength="45" placeholder="Custom product number (ex. UPC, SKU)">
           <small class="text-muted">Maximum 45 characters</small>
         </div>
       </fieldset>
