--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -15,7 +15,7 @@
               </div>
             </div>
             <div class="panel panel-body">
-              <div class="table-responsive">
+              <div class="table-responsive table-card-responsive">
                 <table class="table tableWhite">
                   <thead>
                     <tr>
