--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -15,13 +15,17 @@
     font-size: 18px;
     img {
       display: inline-block;
-      margin-top: -5px;
+      margin-top: -7px;
       margin-left: 25px;
+      max-width: 190px;
+      padding: 0px;
+
     }
     @media screen and (max-width: 768px) {
       img {
-        margin-left: -5px;
-        width: 25px;
+        margin-left: 0px;
+        width: 150px;
+        margin-top: -4px;
       }
     }
   }
