--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -9,7 +9,9 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.overview">
-          <img src="https://s3.amazonaws.com/coastline-us/coastline-logo.png" alt="coastline logo"> {{fisheryName}}
+          <!-- <img src="https://s3.amazonaws.com/coastline-us/coastline-logo.png" alt="coastline logo"> -->
+          <img src="../coastline-logo.png" class="logo" alt="coastline logo">
+           <!-- {{fisheryName}} -->
         </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse" ng-init="isCollapsed=true" uib-collapse="isCollapsed">
