--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -177,7 +177,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Set Finished Good Type:</label>
-          <select class="form-control" ng-model="selectedFinishedProduct" ng-init="block.finishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts"></select>
+          <select class="form-control" ng-model="selectedFinishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts"></select>
           <small class="text-muted">Item must be added under Products tab.</small>
         </div>
         <div class="col-lg-12">
