--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -127,7 +127,7 @@
               <tbody>
                 <tr ng-repeat="finishedProduct in finishedProducts track by $index">
                   <td data-label="Name">&nbsp; {{finishedProducts[$index].name}}</td>
-                  <td><button class="btn-table-danger align-right" ng-click="removeFinishedProduct($index)"><i class="fa fa-minus"></i></button><a class='table-edit align-right' ng-click="editFinishedProduct()">Edit&nbsp;&nbsp;</a></td>
+                  <td><button class="btn-table-danger align-right" ng-click="removeFinishedProduct(finishedProducts[$index]._id)"><i class="fa fa-minus"></i></button><a class='table-edit align-right' ng-click="editFinishedProduct(finishedProducts[$index]._id)">Edit&nbsp;&nbsp;</a></td>
                 </tr>
                 <tr>
                   <td>&nbsp;</td>
@@ -185,7 +185,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Product Number</label>
-          <input class="form-control" ng-model="finishedProductNumber"  placeholder="Custom product number (ex. UPC, SKU)">
+          <input class="form-control" ng-model="productNumber"  placeholder="Custom product number (ex. UPC, SKU)">
         </div>
       </fieldset>
     </form>
