--- a/src/css/components/_panel.scss
+++ b/src/css/components/_panel.scss
@@ -17,7 +17,7 @@
       margin-top: -68px;
       a {
         color: #FFF;
-        font-size: 20px;
+        font-size: 14px;
         outline: 0;
         padding-left: 5px;
         padding-right: 5px;
@@ -124,6 +124,10 @@
   h4 {
     font-weight: 300;
   }
+  li {
+     padding: 5px;
+     font-size: 15px;
+ }
   .panel-setting-heading {
     font-size: 18px;
     font-weight: 300;
@@ -192,4 +196,29 @@
 .invisible-block {
     display: block;
   }
+}
+p.stripe-fail {
+   margin-top: 10px;
+   background-color: #E57373;
+   padding: 15px;
+   border-radius: 2px;
+   margin-bottom: 10px;
+   color: #FFF;
+   width: 100%;
+   text-align: center;
+   box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
+   font-size: 16px;
+
+}
+.stripe-success {
+   margin-top: 10px;
+   background-color: #81C784;
+   padding: 15px;
+   border-radius: 2px;
+   margin-bottom: 10px;
+   color: #FFF;
+   width: 100%;
+   text-align: center;
+   box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
+   font-size: 16px;
 }
