--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -151,7 +151,7 @@
                      <span class="section-required" ng-hide="phoneRequired">*</span>
                      <span class="input-required" ng-show="phoneRequired">Required</span>
                   </label>
-                  <input class="form-control" maxlength="10" ng-model="phone" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
+                  <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
                </div>
 
                <div class="col-lg-4">
@@ -399,7 +399,7 @@
                   <label>Phone Number &nbsp;
                      <span class="input-required" ng-show="phoneRequired"> * Required</span>
                   </label>
-                  <input class="form-control" maxlength="10" ng-model="phone" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
+                  <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
                   <small class="text-muted">No spaces or dashes</small>
                </div>
 
