--- a/src/views/dashboard.settings.ecommerce.html
+++ b/src/views/dashboard.settings.ecommerce.html
@@ -1,154 +1,38 @@
 <div ng-controller="EcommerceSettingsCtrl">
-  <div class="col-lg-10 main">
-    <div class="card-panel">
-      <div class="card-panel-header">
-        <h2>Ecommerce Settings</h2>
-      </div>
-      <div class="panel-body">
+   <div class="col-lg-10 main">
+      <div class="card-panel">
+         <div class="card-panel-header">
+            <h2>E-commerce Settings</h2>
+            <div class="card-panel-options">
+               <div class="col-lg-12 invisible-block">Invisible</div>
 
-      <div class="panel-setting">
-
-         <a href="https://connect.stripe.com/oauth/authorize?response_type=code&client_id=ca_8eoc6dk608vyD1XQrSe6WuABhoncKnLj&scope=read_write" class="stripe-connect"><span>Connect with Stripe</span></a>
-         <a href="javascript:void(0)" ng-click="remove()" class="stripe-connect"><span>Remove Stripe</span></a>
-
-
-        <!-- <form>
-          <div class="row">
-            <div class="col-lg-6">
-              <fieldset class="form-group">
-                <div class="row">
-                  <div class="col-lg-3">
-                    <label>Username</label>
-                  </div>
-                  <div class="col-lg-9">
-                    <input class="form-control" ng-model="username" type="text" disabled></input>
-                    <small class="text-muted">Your username is for logging in and can't be changed.</small>
-                  </div>
-                </div>
-              </fieldset>
-
-
-              <fieldset class="form-group">
-                <div class="row">
-                  <div class="col-lg-3">
-                    <label>Account Email Address</label>
-                  </div>
-                  <div class="col-lg-9">
-                    <input class="form-control" ng-model="email" type="email" placeholder="No email registered." disabled></input>
-                    <small class="text-muted">For security reasons, please contact us to change your email.</small>
-                  </div>
-                </div>
-              </fieldset>
+               <button type="button" onclick="location.href='https://connect.stripe.com/oauth/authorize?response_type=code&client_id=ca_8eoc6dk608vyD1XQrSe6WuABhoncKnLj&scope=read_write';" class="btn-status-default">
+                  Connect with Stripe
+               </button>
+               <button href="javascript:void(0)" ng-click="remove()" class="btn-status-danger">
+                  Remove Stripe
+               </button>
             </div>
-
-            <div class="col-lg-6">
-              <fieldset class="form-group">
-                <div class="row">
-                  <div class="col-lg-3">
-                    <label>Full Name</label>
-                  </div>
-                  <div class="col-lg-9">
-                    <input class="form-control" ng-disabled="isLoading" ng-model="name" type="text" placeholder="No name registered." ng-disabled="isSaving"></input>
-                  </div>
-                </div>
-              </fieldset>
-
-              <fieldset class="form-group">
-                <div class="row">
-                  <div class="col-lg-3">
-                    <label>Phone Number</label>
-                  </div>
-                  <div class="col-lg-9">
-                    <input class="form-control" ng-disabled="isLoading" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
-                  </div>
-                </div>
-              </fieldset>
+         </div>
+         <div class="panel-body">
+            <div class="col-lg-12" ng-switch on="stripeRemoved">
+               <p class="stripe-fail" ng-switch-when="0">No Stripe Integration Found.</p>
+               <p class="stripe-success" ng-switch-when="1">Stripe Integration Removed.</p>
+               <p ng-swith-default></p>
             </div>
-          </div>
-          <div align="right" class="panel-setting">
-          <button ng-disabled="isSubmitButtonDisabled()" ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
-        </div>
-        </form> -->
-      </div>
-    </div>
-    </div>
-  </div>
-
-
-  <!-- <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">General Settings</h2>
-    <div class="row placeholders">
-      <div class="col-lg-8">
-        <div class="container">
-          <div class="panel-container">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="panel-setting">
-                  <form>
-                    <div class="row">
-                      <div class="col-lg-6">
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Username</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-model="username" type="text" disabled></input>
-                              <small class="text-muted">Your username is for logging in and can't be changed.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Account Email Address</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="email" type="email" placeholder="No email registered." disabled></input>
-                              <small class="text-muted">For security reasons, please contact us to change your email.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-                      </div>
-
-                      <div class="col-lg-6">
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Full Name</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" ng-model="name" type="text" placeholder="No name registered." ng-disabled="isSaving"></input>
-                              <small class="text-muted">Please enter your new password.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <div class="col-lg-3">
-                              <label>Phone Number</label>
-                            </div>
-                            <div class="col-lg-9">
-                              <input class="form-control" ng-disabled="isLoading" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
-                              <small class="text-muted">Please enter only numbers.</small>
-                            </div>
-                          </div>
-                        </fieldset>
-                      </div>
-                    </div>
-                    <div align="right" class="panel-setting">
-                    <button ng-disabled="isSubmitButtonDisabled()" ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
-                  </div>
-                  </form>
-                </div>
-              </div>
+            <div class="col-lg-12" ng-switch on="isStripeValid">
+               <p class="stripe-fail" ng-switch-when="1">Stripe authentication failed.</p>
+               <p class="stripe-success" ng-switch-when="0">Stripe successfully authenticated.</p>
+               <p ng-switch-default></p>
             </div>
-          </div>
-        </div>
+            <div class="col-lg-12">
+               <ul>
+                  <li>To accept credit card payments on Coastline E-commerce, you must authorize Stripe to accept payments.</li>
+                  <li>Please click <b>"Connect with Stripe"</b> to start accepting customer payments with Stripe.</li>
+                  <li>To disable Stripe from your account, please click <b>"Remove Stripe"</b> and follow the instructions provided.</li>
+               </ul>
+            </div>
+         </div>
+         </div>
       </div>
-    </div>
-  </div> -->
-</div>
+   </div>
